--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,20 @@
-<nav class="navbar navbar-static-top navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.name }}</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        {% for page in site.pages %}
-        {% if page.title %}
-		{% if page.excludedFromNav != true %}
-        <li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-        {% endif %}
-		{% endif %}
-        {% endfor %}
-      </ul>
-    </div><!--/.nav-collapse -->
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="{{ site.baseurl }}/">{{ site.name }}></a>
+
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div class="nav-right">
+    {% for page in site.pages %}
+    {% if page.title %}
+    {% if page.excludedFromNav != true %}
+    <a class="navbar-item" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+    {% endif %}
+    {% endif %}
+    {% endfor %}
   </div>
 </nav>
